Updating dataflow: MappingDFTest

--- a/dataflow/MappingDFTest.json
+++ b/dataflow/MappingDFTest.json
@@ -3,10 +3,18 @@
 	"properties": {
 		"type": "MappingDataFlow",
 		"typeProperties": {
-			"sources": [],
+			"sources": [
+				{
+					"dataset": {
+						"referenceName": "Employee_DS",
+						"type": "DatasetReference"
+					},
+					"name": "EmployeeSrc"
+				}
+			],
 			"sinks": [],
 			"transformations": [],
-			"script": ""
+			"script": "source(allowSchemaDrift: true,\n\tvalidateSchema: false,\n\tignoreNoFilesFound: false) ~> EmployeeSrc"
 		}
 	}
 }
